# smhi-observations

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: data-as-csv.rs  get-data.rs  parse-data.rs
src/: error.rs  lib.rs  model.rs
