[package]
name = "smhi-observations"
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
reqwest = { version = "0.12", features = ["json", "gzip"] }
tokio = { version = "1", features = ["rt", "net", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
clap = { version="4.5", features = ["derive"] }
